# tema2_Cpaoo

src/: CMakeLists.txt  main.cpp
src/Vehicle/: CMakeLists.txt  IVehicle.h  Vehicle.cpp  Vehicle.h
src/Vehicle/Boat/: CMakeLists.txt
